zmenu_manager_cluster/03_cluster_pgadmin/07-pgadmin-service.yaml
# pgadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
  labels:
    environment: staging 
spec:
  selector:
    app: pgadmin
  ports:
    - name: http
      port: 5050
      targetPort: http
