zmenu_manager_cluster/03_cluster_pgadmin/08-pgadmin-route.yaml
# 5) Route per accesso esterno
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: pgadmin
  labels:
    app: pgadmin
spec:
  to:
    kind: Service
    name: pgadmin
  port:
    targetPort: http
  tls:
    termination: edge
